refactoring(code): code simplified and cleaned