@@ -185,7 +185,6 @@
                         --add-opens latexdraw/net.sf.latexdraw.handler=ALL-UNNAMED
                         --add-opens latexdraw/net.sf.latexdraw.parser=ALL-UNNAMED
                         --add-opens latexdraw/net.sf.latexdraw.parser.svg=ALL-UNNAMED
-                        --add-opens latexdraw/net.sf.latexdraw.parser.svg.parsers=ALL-UNNAMED
                         --add-opens latexdraw/net.sf.latexdraw.parser.svg.path=ALL-UNNAMED
                         --add-opens latexdraw/net.sf.latexdraw.parser.pst=ALL-UNNAMED
                         --add-opens latexdraw/net.sf.latexdraw.parser.ps=ALL-UNNAMED
